updated to latest main version changes (today)
- translated new things

--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -5003,7 +5003,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_HAUNTED_QUARRY_EXAMINE</zType>
-		<Translation><![CDATA[Untersuche die Steinbruch um herauszufinden wie es hergestellt wurde.]]></Translation>
+		<Translation><![CDATA[Untersuche den Steinbruch um herauszufinden wie es hergestellt wurde.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_HAUNTED_QUARRY_HAUL</zType>
