--- a/Translations/German/text-relationship-change.xml
+++ b/Translations/German/text-relationship-change.xml
@@ -91,7 +91,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_JEALOUS_ABOUT_VERB</zType>
-		<Translation>Wird eifersüchtig wegent</Translation>
+		<Translation>Wird eifersüchtig wegen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_SUSPICIOUS_OF</zType>
